--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,11 +1,24 @@
 {
-    "$schema": "node_modules/wrangler/config-schema.json",
-    "name": "the-web",
-    // Update to today's date
-    "compatibility_date": "2025-08-16",
-    "assets": {
-      "directory": "./dist",
-      "not_found_handling": "404-page" // Use the custom 404 page at src/pages/404.astro
+  "$schema": "node_modules/wrangler/config-schema.json",
+  "name": "the-web",
+  "compatibility_date": "2025-08-16",
+  "assets": {
+    "directory": "./dist",
+    "not_found_handling": "404-page"
+  },
+  "vars": {
+    "NEON_DATABASE_URL": "${NEON_DATABASE_URL}"
+  },
+  "env": {
+    "development": {
+      "vars": {
+        "NEON_DATABASE_URL": "${NEON_DATABASE_URL}"
+      }
+    },
+    "production": {
+      "vars": {
+        "NEON_DATABASE_URL": "${NEON_DATABASE_URL}"
+      }
     }
   }
-  
+}
